--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: Your Portfolio Title
+description: A description of your portfolio or the purpose of your site.
+theme: jekyll-theme-cayman
