--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Your Portfolio Title
-description: This portfolio is create by III Sem students of CSE dept .Which provides a detailed information about implementation of DSA algorithms on the topic MILITARY LOGISTICS AND SUPPLY CHAIN 
+description: This portfolio is created by III Sem students of CSE dept .Which provides a detailed information about implementation of DSA algorithms on the topic MILITARY LOGISTICS AND SUPPLY CHAIN 
 theme: jekyll-theme-cayman
